# magicpickle

./: .gitignore  LICENSE  README.md  pyproject.toml  tmux_magicpickle.py
.github/workflows/: auto-publish.yml
magicpickle/: __init__.py  magicpickle.py
