[project]
name = "magicpickle"
version = "0.0.4"
description = "A wrapper around magic-wormhole and joblib to send pickled objects across the internet."
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
    "joblib",
    "magic-wormhole",
]

[project.urls]
Repository = "https://github.com/jasonkena/magicpickle"
